--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Meghana vishwanath",
   "license": "ISC",
@@ -16,7 +17,6 @@
     "express-session": "^1.15.2",
     "mongoose": "^4.9.2",
     "nodemailer": "^4.0.1",
-    "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0"
